# RogueLike

./: .clang-format  .gitignore  .vimrc  CMakeLists.txt  RogueLike.sln  _gvimrc  build.bat  build.sh  startup.bat
RogueLike/: RogueLike.vcxproj  RogueLike.vcxproj.filters
RogueLike/include/: Engine.h  Image.h  common.h
RogueLike/src/: Engine.cpp  StbImpls.cpp
code/: .main.cpp.swp  game.cpp  linux_startup.cpp  main.cpp  win32_startup.cpp
code/basic/: archive.hpp  common.hpp  convert.cpp  convert.hpp  crc32.hpp  debug.cpp  debug.hpp  file.hpp  hash_map.hpp  hash_to_index.cpp  hash_to_index.hpp  image.cpp  image.hpp  json_document.cpp  json_object.cpp  json_object.hpp  memory.cpp  memory.hpp  rect.hpp  string.cpp  string.hpp  types.hpp  vector.hpp
code/core/: core.hpp  event.hpp  file.cpp  file.hpp  file_name.cpp  file_name.hpp  file_node.hpp  ftransform.cpp  ftransform.h  igame_instance.hpp  iglobal_context.cpp  iglobal_context.hpp  path.cpp  path.hpp  pool.hpp  stdext.hpp  system.hpp  system_manager.cpp  system_manager.hpp
code/core/systems/: event_system.cpp  event_system.hpp  file_system.cpp  file_system.hpp  resource_storage.cpp  resource_storage.hpp  widget_system.cpp  widget_system.hpp
code/core/widget/: widget.cpp  widget.hpp  widget_button.cpp  widget_button.hpp  widget_list.cpp  widget_list.hpp  widget_text.cpp  widget_text.hpp
code/game/: game_application.cpp  game_application.hpp  game_instance.cpp  game_instance.hpp
code/include/: actor.hpp  async_common.hpp  cache.hpp  camera.hpp  config.hpp  defines.hpp  engine.hpp  entity.hpp  fbx_helper.hpp  font.hpp  frames.hpp  frustum.hpp  image_rect_set.hpp  input.hpp  line.hpp  material.hpp  mesh_loader.hpp  object.cpp  object.h  object.hpp  object_manager.hpp  octree.h  render.hpp  render_common.hpp  render_object.hpp  render_system.hpp  resource_storage.hpp  root_widget.hpp  scene_node.cpp  scene_node.h  scene_node.hpp  shader.hpp  sprite.hpp  static_mesh.hpp  text.hpp  text_component.hpp  texture.hpp  texture_cache.hpp  thread_pool.hpp  timer_manager.hpp  (+8 more)
code/include/basic/: common.hpp  convert.hpp  file.hpp  hash_map.hpp  image.hpp  json_document.hpp  json_object.hpp  map.hpp  memory.hpp  pair.hpp  pool.hpp  string.hpp  time.hpp  types.hpp  util_functions.hpp  vector.hpp
code/include/ecs/: component.hpp  component_manager.hpp  ecs.hpp  ecs_manager.hpp  entity.hpp  entity_component_system.hpp
code/include/generic/: generic_object.hpp  generic_object_manager.hpp  pool.hpp  type_info.hpp
code/platform/linux/: unix_time.cpp
code/platform/windows/: win32_file.cpp  win32_time.cpp  win32_window.cpp
code/render/: render.hpp  render_common.cpp  render_common.hpp  render_object_manager.hpp
code/render/opengl/: base_render.h  glbuffer.cpp  glbuffer.hpp  glhandle.cpp  glhandle.hpp  glshader.cpp  glshader.hpp  gltypes.hpp  opengl_render.cpp  opengl_render.hpp  opengl_wrapper.cpp  opengl_wrapper.hpp  resource_shader.cpp  resource_shader.hpp  static_mesh.cpp  static_mesh.hpp
code/src/: .render.cpp.swp  .render_object.cpp.swp  Image.cpp  camera.cpp  config.cpp  engine.cpp  entity.cpp  fbx_helper.cpp  font.cpp  frames.cpp  image_rect_set.cpp  input.cpp  line.cpp  material.cpp  object.cpp  object_manager.cpp  octree.cpp  opengl_render.cpp  render.cpp  render_common.cpp  render_object.cpp  render_system.cpp  resource_storage.cpp  root_widget.cpp  scene_node.cpp  shader.cpp  sprite.cpp  static_mesh.cpp  text.cpp  text_component.cpp  texture.cpp  texture_cache.cpp  thread_pool.cpp  timer_manager.cpp  transform.cpp  widget.cpp  widget_list.cpp  widget_text.cpp  worker.cpp
code/src/basic/: .util_functions.cpp.swp  convert.cpp  file.cpp  (+7 more)
data/: fshader.glsl  text_fshader.glsl  vshader.glsl
data/shaders/: default.fs  default.prog  default.vs  default_pt.vs  posteffect.fs  posteffect.vs  primitive.vs  programs.conf  text.fs  text.prog  texture.fs  texture_grid.fs
data/textures/: SoM_Icon_2.conf
tests/: CMakeLists.txt  hash_map_test.cpp  hash_map_test.hpp  test_main.cpp
(+13 files in other folders)
